--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           node-version: 16
       - name: install
-        run: npm install --workspace=apps/tasks/frontend
+        run: |
+        npm install
+        npm install --workspace=apps/tasks/frontend
 
       - name: lint
         run: npm run lint-tasks-frontend
