--- a/apps/tasks/frontend/package.json
+++ b/apps/tasks/frontend/package.json
@@ -11,6 +11,7 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "node-fetch": "^3.2.4",
         "react": "^18.1.0",
         "react-dom": "^18.1.0"
     },
