--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
     "name": "latte-and-front",
     "workspaces": [
-        "apps/tasks/frontend"
+        "apps/tasks/frontend",
+        "apps/pokemons/frontend"
     ],
     "scripts": {
         "dev-tasks-frontend": "npm run dev --workspace=apps/tasks/frontend",
         "build-tasks-frontend": "npm run build --workspace=apps/tasks/frontend",
         "lint-tasks-frontend": "npm run lint --workspace=apps/tasks/frontend",
         "test-tasks-frontend": "npm run test --workspace=apps/tasks/frontend",
-        "coverage-tasks-frontend": "npm run coverage --workspace=apps/tasks/frontend"
+        "coverage-tasks-frontend": "npm run coverage --workspace=apps/tasks/frontend",
+        "dev-pokemons-frontend": "npm run dev --workspace=apps/pokemons/frontend",
+        "build-pokemons-frontend": "npm run build --workspace=apps/pokemons/frontend",
+        "lint-pokemons-frontend": "npm run lint --workspace=apps/pokemons/frontend",
+        "test-pokemons-frontend": "npm run test --workspace=apps/pokemons/frontend",
+        "coverage-pokemons-frontend": "npm run coverage --workspace=apps/pokemons/frontend"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^5.23.0",
