--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "latte-and-front",
-    "workspaces": [
-        "apps/tasks/frontend",
-        "apps/pokemons/frontend"
-    ],
-    "scripts": {
-        "dev-tasks-frontend": "npm run dev --workspace=apps/tasks/frontend",
-        "build-tasks-frontend": "npm run build --workspace=apps/tasks/frontend",
-        "lint-tasks-frontend": "npm run lint --workspace=apps/tasks/frontend",
-        "test-tasks-frontend": "npm run test --workspace=apps/tasks/frontend",
-        "coverage-tasks-frontend": "npm run coverage --workspace=apps/tasks/frontend",
-        "dev-pokemons-frontend": "npm run dev --workspace=apps/pokemons/frontend",
-        "build-pokemons-frontend": "npm run build --workspace=apps/pokemons/frontend",
-        "lint-pokemons-frontend": "npm run lint --workspace=apps/pokemons/frontend",
-        "test-pokemons-frontend": "npm run test --workspace=apps/pokemons/frontend",
-        "coverage-pokemons-frontend": "npm run coverage --workspace=apps/pokemons/frontend"
-    },
-    "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.23.0",
-        "@typescript-eslint/parser": "^5.23.0",
-        "eslint": "^8.15.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-config-standard": "^17.0.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-n": "^15.2.0",
-        "eslint-plugin-promise": "^6.0.0",
-        "eslint-plugin-react": "^7.29.4",
-        "prettier": "^2.6.2"
-    }
+  "name": "latte-and-front",
+  "workspaces": [
+    "apps/**"
+  ],
+  "scripts": {
+    "dev-tasks-frontend": "npm run dev --workspace=apps/tasks/frontend",
+    "build-tasks-frontend": "npm run build --workspace=apps/tasks/frontend",
+    "lint-tasks-frontend": "npm run lint --workspace=apps/tasks/frontend",
+    "test-tasks-frontend": "npm run test --workspace=apps/tasks/frontend",
+    "coverage-tasks-frontend": "npm run coverage --workspace=apps/tasks/frontend",
+    "dev-pokemons-frontend": "npm run dev --workspace=apps/pokemons/frontend",
+    "build-pokemons-frontend": "npm run build --workspace=apps/pokemons/frontend",
+    "lint-pokemons-frontend": "npm run lint --workspace=apps/pokemons/frontend",
+    "test-pokemons-frontend": "npm run test --workspace=apps/pokemons/frontend",
+    "coverage-pokemons-frontend": "npm run coverage --workspace=apps/pokemons/frontend"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2"
+  }
 }
