--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "react-router-dom": "^6.3.0"
   }
 }
